--- a/layouts/partials/render-menu.html
+++ b/layouts/partials/render-menu.html
@@ -5,7 +5,7 @@
   <div class="kko-color-logo">
     {{- partial "get-svg.html" "images/kko-color-head.svg" -}}
   </div>
-  <div class="kko-name">Kindekrippe<br />Olten</div>
+  <div class="kko-name">Kinderkrippe<br />Olten</div>
   <div class="kko-main-menu">
     {{ range $menu.mainlinks }}
     <div class="kko-menu-item kko-color-{{ .color }}">
