--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,8 +2,7 @@
 <html lang="{{ .Site.Language.Lang }}">
 {{- partial "head.html" . -}}
 <body>
-    {{- partial "header.html" . -}}
-    {{- partial "measure.html" . -}}
+    {{- partial "kko-header.html" . -}}
     {{- block "main" . }}{{- end }}
     {{- partial "kko-footer.html" . -}}
     {{- partial "kko-open-links-external.html" . -}}
