make menu work nicely on mobile

--- a/assets/scss/_kko-header.scss
+++ b/assets/scss/_kko-header.scss
@@ -16,7 +16,7 @@ header.kko-header {
 
   .kko-pulldown-menu {
     display: block;
-    position: fixed;
+    position: absolute;
     left: 0;
     width: 100%;
     top: calc(-100vh + #{$kko-border-stripe-width * 6});
