--- a/assets/scss/site.scss
+++ b/assets/scss/site.scss
@@ -89,291 +89,13 @@ $modal-container-width: 778px !default;
 @import "kko-header";
 @import "kko-footer";
 @import "kko-menu";
+@import "kko-circle-pic";
+@import "kko-minigame";
+@import "kko-doublepage";
 
-
-.kko-minigame-footer {
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  position: relative;
-  background-color: $kko-blog-grey-blue;
-  height: $kko-border-stripe-width * 3;
-
-  .kko-minigame-down-arrow {
-    overflow: hidden;
-    display: inline-block;
-    width: 3.5rem;
-    height: 3.5rem;
-
-    div {
-      position: relative;
-      z-index: 2;
-      box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.1);
-      background-color: $kko-base-blue;
-      border-top-left-radius: 50%;
-      border-top-right-radius: 50%;
-      border-width: 0;
-      width: 3.5rem;
-      height: 3.5rem;
-      display: flex;
-      flex-direction: row;
-
-      svg {
-        transform: rotate(90deg);
-        width: 100%;
-        height: auto;
-        padding: 0.6rem;
-
-        path {
-          fill: $kko-base-beige;
-        }
-      }
-    }
-  }
-
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: $kko-border-stripe-width * 3;
-    background-image: linear-gradient(to bottom,
-        $kko-base-green 0rem, $kko-base-green $kko-border-stripe-width,
-        $kko-base-red $kko-border-stripe-width, $kko-base-red $kko-border-stripe-width * 2,
-        $kko-base-blue $kko-border-stripe-width * 2, $kko-base-blue $kko-border-stripe-width * 3);
-    z-index: 1;
-  }
-}
-
-@media (min-width: $breakpoint-small) {
-  .kko-minigame-footer {
+// hide the menu on mobile
+@media (max-width: $breakpoint-small) {
+  .kko-doublepage-right .kko-menu {
     display: none;
-  }
-}
-
-.kko-minigame-body {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.kko-minigame-3body {
-  background-color: $kko-base-yellow;
-
-  @media (max-width: $breakpoint-small) {
-    height: calc(100vh - #{$kko-border-stripe-width * 6});
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-
-  @media (min-width: $breakpoint-small) {
-    .uk-slider:hover {
-
-      .kko-arrow-left,
-      .kko-arrow-right {
-        display: block;
-      }
-    }
-
-    .kko-arrow-left,
-    .kko-arrow-right {
-      display: none;
-    }
-  }
-
-  .kko-arrow-left,
-  .kko-arrow-right {
-    overflow: hidden;
-    width: 2rem;
-    height: 2.1rem;
-
-    div {
-      position: absolute;
-      right: -0.5rem;
-      box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.1);
-      background-color: $kko-base-beige;
-      border-top-left-radius: 50%;
-      border-bottom-left-radius: 50%;
-      width: 2rem;
-      height: 2rem;
-      display: flex;
-
-      svg {
-        padding: 0.2rem;
-      }
-    }
-  }
-
-  .kko-arrow-left {
-    transform: rotate(180deg);
-    transform-origin: 50% 25%;
-  }
-
-  @media (max-width: $breakpoint-small) {
-    img {
-      height: 23vh;
-      object-fit: cover;
-    }
-  }
-}
-
-.kko-doublepage {
-  overflow: hidden;
-
-  &.kko-background-yellow {
-    background-color: $kko-base-yellow;
-  }
-
-  &.kko-background-beige {
-    background-color: $kko-base-beige;
-  }
- 
-  .kko-border-stripes {
-    position: relative;
-
-    @media (max-width: $breakpoint-small) {
-     
-    .kko-menu {
-        display: none;
-    }
-  }      
-    @media (min-width: $breakpoint-small) {
-      .kko-doublepage-left {
-        padding-left: $kko-border-stripe-width * 3;
-      }
-
-      .kko-doublepage-right {
-        padding-right: $kko-border-stripe-width * 3;
-      }
-
-      &::before,
-      &::after {
-        position: absolute;
-        top: 0;
-        content: "";
-        width: $kko-border-stripe-width * 3;
-        height: 100%;
-      }
-
-      &::before {
-        left: 0;
-        background-image: linear-gradient(to right,
-            $kko-base-blue 0rem, $kko-base-blue $kko-border-stripe-width ,
-            $kko-base-red $kko-border-stripe-width, $kko-base-red $kko-border-stripe-width * 2,
-            $kko-base-green $kko-border-stripe-width * 2, $kko-base-green $kko-border-stripe-width * 3,
-          );
-      }
-
-      &::after {
-        right: 0;
-        background-image: linear-gradient(to left,
-            $kko-base-yellow 0rem, $kko-base-yellow $kko-border-stripe-width,
-            $kko-base-red $kko-border-stripe-width , $kko-base-red $kko-border-stripe-width * 2,
-            $kko-base-green $kko-border-stripe-width *2, $kko-base-green $kko-border-stripe-width * 3, );
-      }
-    }
-
-    @media (max-width: $breakpoint-small) {
-      .kko-doublepage-left {
-        padding-top: 0;
-
-        // &::before {
-        //   content: "";
-        //   position: absolute;
-        //   top: 0;
-        //   left: 0;
-        //   width: 100%;
-        //   height: $kko-border-stripe-width * 3;
-        //   background-image: linear-gradient(to bottom,
-        //       $kko-base-yellow 0rem, $kko-base-yellow $kko-border-stripe-width ,
-        //       $kko-base-red $kko-border-stripe-width, $kko-base-red $kko-border-stripe-width * 2,
-        //       $kko-base-green $kko-border-stripe-width * 2, $kko-base-green $kko-border-stripe-width * 3,
-        //     );
-        // }
-
-      }
-    }
-  }
-
-}
-
-
-
-.kko-block {
-  padding-top: 3rem;
-  padding-left: 4rem;
-  padding-right: 4rem;
-  padding-bottom: 3rem;
-
-  &.kko-background-green {
-    background-color: $kko-base-green;
-  }
-
-  &.kko-background-red {
-    background-color: $kko-base-red;
-  }
-
-  &.kko-background-yellow {
-    background-color: $kko-base-yellow;
-  }
-
-  &.kko-background-blue {
-    background-color: $kko-blog-light-blue;
-  }
-}
-
-.kko-picture-circles {
-  position: relative;
-  min-height: 60vh;
-
-  .kko-circle {
-    position: absolute;
-    border-radius: 100%;
-    object-fit: cover;
-    width: 50cqw;
-    height: 50cqw;
-  }
-
-  .kko-circle-3-1,
-  .kko-circle-5-1 {
-    top: 0;
-    right: 0;
-  }
-
-  .kko-circle-3-2 {
-    top: 20cqh;
-    left: 10cqw;
-    z-index: 1;
-  }
-
-  .kko-circle-3-3 {
-    bottom: 0;
-    right: 10cqw;
-    z-index: 2;
-  }
-
-  .kko-circle-5-2 {
-    top: 5cqh;
-    left: -10cqw;
-    z-index: 2;
-  }
-
-  .kko-circle-5-3 {
-    top: 25cqh;
-    left: 15cqw;
-    z-index: 3;
-  }
-
-  .kko-circle-5-4 {
-    top: 50cqh;
-    left: 40cqw;
-    z-index: 4;
-  }
-
-  .kko-circle-5-5 {
-    bottom: 0;
-    left: 25cqw;
-    z-index: 5;
   }
 }
