--- a/assets/scss/_kko-menu.scss
+++ b/assets/scss/_kko-menu.scss
@@ -6,6 +6,9 @@
   padding-left: 5cqw;
   padding-top: 0;
   height: calc(100vh - #{$kko-border-stripe-width * 3});
+  @media (min-width: $breakpoint-small) {
+    height: 100vh;
+  }
   width: 100%;
   left: 0;
   a {
