fix sub menu font size

--- a/assets/scss/_kko-header.scss
+++ b/assets/scss/_kko-header.scss
@@ -42,9 +42,9 @@ header.kko-header {
     right: 7cqw;
     width: 12cqw;
     @media (min-width: $breakpoint-small) {
-      width: 4rem;
-      right: 5rem;
-      top: 2rem;
+      width: 6cqw;
+      right: 5cqw;
+      top: 2cqw
     }
     svg {
       width: 100%;
