--- a/layouts/partials/kko-header.html
+++ b/layouts/partials/kko-header.html
@@ -1,5 +1,5 @@
 <header
-  class="uk-container-expand kko-header"
+  class="uk-container-expand kko-header {{ .Store.Get `kko-header-class-extra` }}"
   uk-sticky="show-on-up: true; cls-active: kko-header-active; sel-target: .kko-header"
 >
   <div class="kko-logo">
