--- a/assets/scss/_kko-menu.scss
+++ b/assets/scss/_kko-menu.scss
@@ -4,7 +4,7 @@
   background-color: $kko-base-blue;
   color: $kko-base-beige;
   padding-left: 5cqw;
-  padding-top: 0;
+  padding-top: 3c;
   height: calc(100vh - #{$kko-border-stripe-width * 3});
   @media (min-width: $breakpoint-small) {
     height: 100vh;
@@ -21,7 +21,7 @@
     }
 
     margin-bottom: 3cqw;
-    margin-top: 3cqw;
+    margin-top: 6cqw;
   }
 
   .kko-name {
