add team section

--- a/assets/scss/site.scss
+++ b/assets/scss/site.scss
@@ -92,8 +92,11 @@ $modal-container-width: 778px !default;
 @import "kko-circle-pic";
 @import "kko-minigame";
 @import "kko-doublepage";
+@import "kko-single-page";
+@import "kko-colors";
 @import "kko-blog";
 @import "kko-blog-single";
+@import "kko-team";
 
 // hide the menu on mobile
 @media (max-width: $breakpoint-small) {
