--- a/layouts/_partials/single-page-header.html
+++ b/layouts/_partials/single-page-header.html
@@ -1,7 +1,9 @@
-<div class="kko-blog-header">
+<div class="kko-single-page-header">
+<a href=".." class="uk-link-reset">
 {{ partial "get-svg.html" 
     (dict 
         "path" "images/kko-logo-and-name.svg"
         "class" "kko-logo"
     ) }}
+</a>
 </div>
