--- a/assets/scss/_kko-menu.scss
+++ b/assets/scss/_kko-menu.scss
@@ -40,17 +40,14 @@
       position: relative;
       margin-bottom: 1.5cqw;
 
-      a {
-        width: 100%;
+     
         color: $kko-base-blue;
-        display: inline-block;
-        padding: 1.3cqw 1cqw;
+        padding: 1.3cqw 3cqw;
         border-radius: 100cqw;
         font-size: 3.2cqw;
 
         span {
           display: inline-block;
-          padding-left: 2cqw;
           padding-right: 0.8cqw;
 
           svg {
@@ -60,22 +57,22 @@
             padding-bottom: 0.5cqw;
           }
         }
-      }
+     
 
 
-      &.kko-color-green a {
+      &.kko-color-green  {
         background-color: $kko-base-green;
       }
 
-      &.kko-color-red a {
+      &.kko-color-red  {
         background-color: $kko-base-red;
       }
 
-      &.kko-color-yellow a {
+      &.kko-color-yellow  {
         background-color: $kko-base-yellow;
       }
 
-      &.kko-color-blue a {
+      &.kko-color-blue  {
         background-color: $kko-blog-light-blue;
       }
     }
@@ -88,7 +85,7 @@
     .kko-menu-item {
       margin-bottom: 0.8cqw;
 
-      a {
+      
         color: $kko-base-beige;
         font-size: 3.2cqw;
         span {
@@ -100,7 +97,7 @@
             padding-bottom: 1cqw;
           }
         }
-      }
+     
     }
   }
 }
