--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,9 +1,9 @@
 {{ define "main" }}
 {{ $groupInfo := partial "get-group-data.html" . }}
-<div class="kko-blog-single">
+<div class="kko-blog-single kko-single-page">
 {{ partial "single-page-header.html" . }}
 <div class="uk-container">
-    <div class="kko-blog-content">
+    <div class="kko-blog-content kko-single-page-content">
     <h1 class="kko-blog-title">{{ .Title }}</h1>
     <div class="kko-blog-byline">
         {{ partial "get-svg.html" (dict "path" (printf "images/icons/%s" $groupInfo.groupIcon) "class" "kko-group-icon") }}
